2007-06-20  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-list-regexp): Follow the change of mixi.
	(mixi-get-diaries): Follow the change above.
	(mixi-news-finished-regexp): Follow the change of mixi.

2007-06-19  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-post-key-regexp): Follow the change of mixi.

2007-06-07  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-event-time-regexp): Follow the change of mixi.
	(mixi-event-detail-regexp): Ditto.
	(mixi-event-comment-list-regexp): Ditto.

2007-05-31  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-content-regexp): Follow the change of mixi.
	(mixi-search-diary-list-regexp): Ditto.
	(mixi-topic-content-regexp): Ditto.
	(mixi-event-detail-regexp): Ditto.
	(mixi-diary-comment-list-regexp): Ditto.
	(mixi-topic-comment-list-regexp): Ditto.
	(mixi-event-comment-list-regexp): Ditto.
	(mixi-message-content-regexp): Ditto.

2007-04-26  OHASHI Akira  <bg66@koka-in.org>

	* riece-mixi.el (riece-mixi-send-object-with-url): Don't send a title.

2007-04-19  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-to-regexp): Abolish.
	(shimbun-mixi-send-mail): Ditto.
	* mixi-utils.el (mixi-to-regexp): New constant.
	(mixi-send-mail): New function.
	* mixi-gnus.el (message-mixi-p): Follow the change above.
	(message-send-via-mixi): Ditto.
	* mixi-wl.el (wl-draft-send-mail-with-mixi): Ditto.
	(mixi-wl-setup-draft-buffer): Ditto.
	* acinclude.m4 (AC_EXAMINE_MODULES): Ditto.

2007-04-16  OHASHI Akira  <bg66@koka-in.org>

	* mixi-wl.el (wl-draft-send-mail-with-mixi): Check that title is not
	nil.

2007-04-05  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-friend-list-id-regexp): Follow the change of mixi.
	(mixi-friend-list-nick-regexp): Ditto.
	(mixi-community-category-regexp): Ditto.
	(mixi-community-members-regexp): Ditto.
	(mixi-community-open-level-regexp): Ditto.
	(mixi-community-authority-regexp): Ditto.
	(mixi-community-list-id-regexp): Ditto.
	(mixi-community-list-name-regexp): Ditto.
